--- a/package.json
+++ b/package.json
@@ -21,7 +21,7 @@
   },
   "scripts": {
     "start": "webpack serve --mode development --open",
-    "build": "webpack --mode production",
+    "build": "react build --output public",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
     "dev": "webpack-dev-server --open"
