--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "react": "^18.3.1",
     "react-code-blocks": "^0.1.6",
     "react-dom": "^18.3.1",
+    "react-icons": "^5.3.0",
     "react-refresh": "^0.14.2",
     "styled-components": "^6.1.12"
   },
