--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "react-dom": "^18.3.1",
     "react-icons": "^5.3.0",
     "react-refresh": "^0.14.2",
+    "react-router-dom": "^6.26.1",
     "styled-components": "^6.1.12"
   },
   "devDependencies": {
